--- a/nano.ui
+++ b/nano.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1680</width>
-    <height>932</height>
+    <height>906</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -779,7 +779,7 @@
       <item row="0" column="5">
        <widget class="QGroupBox" name="groupBox_6">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="title">
          <string>Elasticity Spectra</string>
