--- a/nano.ui
+++ b/nano.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1680</width>
-    <height>906</height>
+    <height>935</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -526,6 +526,13 @@
            </property>
            <property name="checked">
             <bool>false</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QRadioButton" name="jpk_open">
+           <property name="text">
+            <string>JpK</string>
            </property>
           </widget>
          </item>
