--- a/nano.ui
+++ b/nano.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1680</width>
-    <height>935</height>
+    <height>909</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -532,7 +532,7 @@
          <item>
           <widget class="QRadioButton" name="jpk_open">
            <property name="text">
-            <string>JpK</string>
+            <string>JPK</string>
            </property>
           </widget>
          </item>
